--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -14,7 +14,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": null,
             "source": [
                 "import os\n",
                 "a=5\n",
@@ -27,7 +27,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "source": [
                 "import numpy as np\n",
                 "\n",
@@ -37,16 +37,7 @@
                 "print(z)\n",
                 "print(np.split(x,z))"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "[3]\n",
-                        "[array([0, 1, 2]), array([3, 4, 5, 6, 7, 8, 9])]\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -166,13 +157,13 @@
                 "        self.capacitance = []\n",
                 "\n",
                 "    def createthread(self):\n",
-                "        thread = threading.Thread(target = self.threaded_function, args = ())\n",
+                "        thread = threading.Thread(target = self.threaded_function, args = (\"%d/%m/%Y - %H:%M:%S\",))\n",
                 "        thread.start()\n",
                 "\n",
-                "    def threaded_function(self):\n",
+                "    def threaded_function(self,fmts=\"%d/%m/%Y, %H:%M:%S\"):\n",
                 "        for i in range(5):\n",
                 "            print(\"running\"+self.name,i)\n",
-                "            print(datetime.now().strftime(\"%d/%m/%Y, %H:%M:%S\"))\n",
+                "            print(datetime.now().strftime(fmts))\n",
                 "            sleep(1)\n",
                 "\n",
                 "\n",
@@ -180,16 +171,14 @@
                 "    cap=C('c1',1.5,0.025)\n",
                 "    \n",
                 "    cap.createthread()\n",
-                "    # cap.threaded_function()\n",
-                "    sleep(4)\n",
-                "    print(\"thread finished...exiting\")"
+                "    # cap.threaded_function()"
             ],
             "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": null,
             "source": [
                 "from quantiphy import Quantity,UnitConversion\n",
                 "\n",
@@ -208,15 +197,7 @@
                 "f=Quantity(x,units='s')\n",
                 "print(f,f.render(form='eng'))"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "12 s 12 s\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -344,7 +325,144 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "source": [],
+            "source": [
+                "from scipy import stats\n",
+                "from scipy.special import erf\n",
+                "from scipy.integrate import quad\n",
+                "import numpy as np\n",
+                "from matplotlib import pyplot as plt\n",
+                "\n",
+                "th = 3\n",
+                "def h(x): return (x-2000)**3-(x-1990)**2\n",
+                "\n",
+                "\n",
+                "tol = 0.01\n",
+                "miu = 2000\n",
+                "sigma = miu*tol/3\n",
+                "\n",
+                "\n",
+                "def f(x, miu=2000, sigma=1, tol=0.01):\n",
+                "    return np.exp(-1/2*((x-miu)/sigma)**2)/(sigma*np.sqrt(2*np.pi)*(erf(tol*miu/sigma/np.sqrt(2))-erf(-tol*miu/sigma/np.sqrt(2)))/2)\n",
+                "\n",
+                "\n",
+                "def rv(miu=2000, tol=0.01):\n",
+                "    return stats.uniform(miu*(1-tol), 2*miu*tol)\n",
+                "\n",
+                "# fx = lambda x : np.exp(-x**2/2/sigma**2)/(erf(tol/np.sqrt(2))*sigma*np.sqrt(2*np.pi))\n",
+                "# rv=stats.uniform(miu*(1-tol),2*miu*tol)\n",
+                "# g = lambda x : rv.pdf(x)\n",
+                "\n",
+                "\n",
+                "N = 1000000\n",
+                "\n",
+                "nor = stats.norm(loc=miu, scale=sigma)\n",
+                "yxx = h(nor.rvs(size=N))\n",
+                "yxx.sort()\n",
+                "plt.plot(yxx, np.linspace(-1, 0, N))\n",
+                "\n",
+                "\n",
+                "X = rv().rvs(size=N)\n",
+                "X.sort()\n",
+                "Y = h(X)\n",
+                "yy = np.copy(Y)\n",
+                "index = yy.argsort()\n",
+                "yy.sort()\n",
+                "m2 = np.zeros(N)\n",
+                "t = f(X, miu, sigma, tol)/rv(miu, tol).pdf(X)\n",
+                "seq = 0\n",
+                "for i in range(N):\n",
+                "    seq += t[index[i]]\n",
+                "    m2[i] = 1/N*seq\n",
+                "# plt.plot(X,np.ones(N),'xr')\n",
+                "# m2=X[X>th]\n",
+                "\n",
+                "# m2=(m2-m2[0])/(m2[-1]-m2[0])\n",
+                "\n",
+                "# plt.plot(X,f(X,miu,sigma,tol))\n",
+                "plt.plot(yy, m2)\n",
+                "plt.grid()\n",
+                "\n",
+                "print(quad(lambda x: np.exp(-1/2*((x-miu)/sigma)**2)/(sigma*np.sqrt(2*np.pi) *\n",
+                "      (erf(tol*miu/sigma/np.sqrt(2))-erf(-tol*miu/sigma/np.sqrt(2)))/2), 1980, 2020))\n",
+                "\n",
+                "plt.show()\n"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "from scipy import stats\n",
+                "from scipy.special import erf\n",
+                "from scipy.integrate import quad\n",
+                "import numpy as np\n",
+                "from matplotlib import pyplot as plt\n",
+                "\n",
+                "th = 3\n",
+                "def h(x,y):\n",
+                "    # return (x-2000)**3-(x-1990)**2\n",
+                "    return x-2*y\n",
+                "\n",
+                "\n",
+                "tolx = 0.01\n",
+                "miux = 2000\n",
+                "sigmax = miux*tolx/3\n",
+                "toly=0.05\n",
+                "miuy=100\n",
+                "sigmay=miuy*toly/3\n",
+                "\n",
+                "def f(x, miu=2000, sigma=1, tol=0.01):\n",
+                "    return np.exp(-1/2*((x-miu)/sigma)**2)/(sigma*np.sqrt(2*np.pi)*(erf(tol*miu/sigma/np.sqrt(2))-erf(-tol*miu/sigma/np.sqrt(2)))/2)\n",
+                "\n",
+                "\n",
+                "def rv(miu=2000, tol=0.01):\n",
+                "    return stats.uniform(miu*(1-tol), 2*miu*tol)\n",
+                "\n",
+                "# fx = lambda x : np.exp(-x**2/2/sigma**2)/(erf(tol/np.sqrt(2))*sigma*np.sqrt(2*np.pi))\n",
+                "# rv=stats.uniform(miu*(1-tol),2*miu*tol)\n",
+                "# g = lambda x : rv.pdf(x)\n",
+                "\n",
+                "\n",
+                "N = 1000\n",
+                "\n",
+                "norx = stats.norm(loc=miux, scale=sigmax)\n",
+                "nory=stats.norm(loc=miuy, scale=sigmay)\n",
+                "yxy = h(norx.rvs(size=N),nory.rvs(size=N))\n",
+                "yxy.sort()\n",
+                "plt.plot(yxy, np.linspace(-1, 0, N))\n",
+                "\n",
+                "\n",
+                "X = rv(miux,tolx).rvs(size=N)\n",
+                "Y=rv(miuy,toly).rvs(size=N)\n",
+                "\n",
+                "Z = h(X,Y)\n",
+                "zz = np.copy(Z)\n",
+                "index = zz.argsort()\n",
+                "zz.sort()   # For plot in order\n",
+                "m2 = np.zeros(N)\n",
+                "tx = f(X, miux, sigmax, tolx)/rv(miux, tolx).pdf(X)\n",
+                "ty=f(Y, miuy, sigmay, toly)/rv(miuy, toly).pdf(Y)\n",
+                "txy=tx*ty\n",
+                "seq = 0\n",
+                "for i in range(N):\n",
+                "    seq += txy[index[i]]\n",
+                "    m2[i] = 1/N*seq\n",
+                "# plt.plot(X,np.ones(N),'xr')\n",
+                "# m2=X[X>th]\n",
+                "\n",
+                "m2=(m2-m2[0])/(m2[-1]-m2[0])\n",
+                "\n",
+                "print(m2[0],m2[-1])\n",
+                "plt.plot(zz, m2)\n",
+                "plt.grid()\n",
+                "\n",
+                "print(quad(lambda x: np.exp(-1/2*((x-miux)/sigmax)**2)/(sigmax*np.sqrt(2*np.pi) *\n",
+                "      (erf(tolx*miux/sigmax/np.sqrt(2))-erf(-tolx*miux/sigmax/np.sqrt(2)))/2), 1980, 2020))\n",
+                "\n",
+                "plt.show()"
+            ],
             "outputs": [],
             "metadata": {}
         }
@@ -353,7 +471,7 @@
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.9.5",
+            "version": "3.9.6",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -365,7 +483,7 @@
         },
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3.9.5 64-bit ('venv': venv)"
+            "display_name": "Python 3.9.6 64-bit ('venv': venv)"
         },
         "interpreter": {
             "hash": "bcca279a21f4a4c5378044df7c921d39c294123c6981b1dc8d0e6e875af00827"
