--- a/User Guide/report.tex
+++ b/User Guide/report.tex
@@ -194,7 +194,7 @@ Main GUI interface.
         Open the designer in Path-to-site-packages/qt5\textunderscore applications/Qt/bin/designer and edit it.
         \begin{figure}[ht]
             \centering
-            \includegraphics[width=0.9\textwidth]{Image/config.eps}
+            \includegraphics[width=0.9\textwidth]{Image/main.eps}
             \caption{}
         \end{figure}
 
@@ -258,6 +258,18 @@ Main GUI interface.
 
 \subsection{src/\textunderscore subwindow.py}
 Define the Processing window and configuration window.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{Image/config.eps}
+    \caption{Configuration window simulation tab}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{Image/config34.eps}
+    \caption{Configuration window CMRR and Op amp tab}
+\end{figure}
 
 \subsection{src/MplWidget.py}
 The header file for the plotting area of both configuration window and main window.
